cmake_minimum_required(VERSION 3.16)
project(SteelArenaShooterLocal VERSION 11.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(SteelArenaShooterLocal src/main.cpp)
target_include_directories(SteelArenaShooterLocal PRIVATE src)
find_package(raylib QUIET)
if(raylib_FOUND)
  target_link_libraries(SteelArenaShooterLocal PRIVATE raylib)
else()
  message(FATAL_ERROR "raylib was not found. Install/build raylib first, then rerun CMake. If installed to /usr/local, try: cmake -S . -B build -DCMAKE_PREFIX_PATH=/usr/local")
endif()
if(UNIX AND NOT APPLE)
  target_link_libraries(SteelArenaShooterLocal PRIVATE m pthread dl rt X11)
endif()
if(WIN32)
  target_link_libraries(SteelArenaShooterLocal PRIVATE winmm gdi32 opengl32 ws2_32)
endif()
add_custom_command(TARGET SteelArenaShooterLocal POST_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:SteelArenaShooterLocal>/save)
